[package]
name = "fast-down-cli"
version = "2.7.9"
edition = "2024"
license = "MIT"
authors = ["share121 <2854631158@qq.com>"]
repository = "https://github.com/fast-down/cli"
readme = "README.md"
exclude = ["/.github"]
description = "超级快的下载器命令行界面"
documentation = "https://docs.rs/fast-down-cli"
homepage = "https://github.com/fast-down/cli"
keywords = ["concurrency", "downloader", "parallel", "performance", "thread"]
categories = ["command-line-utilities", "network-programming"]

[package.metadata.i18n]
available-locales = ["en", "zh-TW", "zh-CN"]
default-locale = "en"

[[bin]]
name = "fd"
path = "src/main.rs"

[dependencies]
bitcode = "0.6.9"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dashmap = "6.2.1"
dialoguer = "0.12.0"
fast-down = { version = "5.0.2", path = "../core/crates/fast-down", features = [
  "fast-puller",
  "cookie-store",
  "file",
  "getifaddrs",
  "reqwest-tls",
  "serde",
] }
file_alloc = "0.1.3"
fs4 = "1.1.0"
futures = "0.3.32"
mimalloc = "0.1.52"
parking_lot = "0.12.5"
path_helper = { version = "0.1.3", features = ["tokio"] }
reqwest = { version = "0.13.4", default-features = false, features = [
  "default-tls",
  "brotli",
  "deflate",
  "gzip",
  "http2",
  "socks",
  "system-proxy",
  "zstd",
  "cookies",
] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
rust-i18n = "4.1.0"
sanitize-filename = "0.6.0"
soft-canonicalize = { version = "0.5.6", features = ["dunce"] }
sys-locale = "0.3.2"
tokio = { version = "1.52.3", default-features = false, features = [
  "io-std",
  "macros",
  "rt-multi-thread",
  "signal",
] }
tokio-util = "0.7.18"
url = "2.5.8"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1

# [lints.clippy]
# all = { level = "deny", priority = -1 }
# cargo = { level = "deny", priority = -1 }
# multiple_crate_versions = "allow"
# nursery = { level = "deny", priority = -1 }
# pedantic = { level = "deny", priority = -1 }
